force-app/main/default/objects/System_Tutorial__c/System_Tutorial__c.object-meta.xml
<CustomObject>
    <description>System_Tutorial__c</description>
    <label>System Tutorial</label>
    <nameField>
        <label>System Tutorial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Tutorials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>