force-app/main/default/objects/System_Tutorial__c/fields/Additional_Information_c__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_c__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>