force-app/main/default/objects/System_Tutorial__c/fields/Description_c__c.field-meta.xml
<CustomField>
    <fullName>Description_c__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>