force-app/main/default/objects/System_Tutorial__c/fields/Draft_c__c.field-meta.xml
<CustomField>
    <fullName>Draft_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>