force-app/main/default/objects/System_Tutorial__c/fields/Relevant_Profile__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Profile__c</fullName>
    <label>Relevant Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Profiles</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>