force-app/main/default/objects/System_Tutorial__c/fields/Tutorial_Type__c.field-meta.xml
<CustomField>
    <fullName>Tutorial_Type__c</fullName>
    <label>Tutorial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General How-To</fullName>
            </value>
            <value>
                <fullName>TS Documents Formatting</fullName>
            </value>
            <value>
                <fullName>Titan Formatting</fullName>
            </value>
            <value>
                <fullName>Internal Processes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>