force-app/main/default/objects/System_Tutorial__c/fields/Video_URL_c__c.field-meta.xml
<CustomField>
    <fullName>Video_URL_c__c</fullName>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>