force-app/main/default/objects/System_Tutorial__c/listViews/All_System_Tutorials.listView-meta.xml
<ListView>
    <fullName>All_System_Tutorials</fullName>
    <columns>NAME</columns>
    <columns>Description_c__c</columns>
    <columns>Tutorial_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tutorial_Type__c</field>
        <operation>notEqual</operation>
        <value>Titan Formatting</value>
    </filters>
    <label>All System Tutorials</label>
</ListView>