force-app/main/default/objects/System_Tutorial__c/listViews/Titan_Formatting_Tutorials.listView-meta.xml
<ListView>
    <fullName>Titan_Formatting_Tutorials</fullName>
    <columns>NAME</columns>
    <columns>Description_c__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tutorial_Type__c</field>
        <operation>equals</operation>
        <value>Titan Formatting</value>
    </filters>
    <label>Titan Formatting Tutorials</label>
</ListView>